Color fix (for dark mode piepeltjes)

--- a/repo-board/src/app/repo.component.scss
+++ b/repo-board/src/app/repo.component.scss
@@ -99,7 +99,7 @@ a {
         }
         a {
             color: rgba(0, 0, 0, .9);
-            &:hover {}
+            color: var(--text-primary-color, rgba(0, 0, 0, .9));
         }
     }
     .container {
@@ -119,6 +119,7 @@ a {
             padding: 0;
             .pr {
                 background: none;
+                color: rgba(0, 0, 0, .9);
                 color: var(--text-primary-color, rgba(0, 0, 0, .9));
                 font-weight: normal;
                 margin: 0;
